Add TypeScript to dependencies.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-meteor-error-notifier",
   "version": "1.0.0",
   "description": "User friendly error notifications from Meteor error objects",
-  "types":"dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/JorgenVatle/vue-meteor-error-notifier#readme",
   "dependencies": {
+    "typescript": "^2.1.6",
     "vue": "^2.6.3"
   }
 }
