--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "dependencies": {
     "typescript": "^2.9.2",
     "vue": "^2.6.3"
+  },
+  "devDependencies": {
+    "@types/vue": "^2.0.0"
   }
 }
